SUBDIRS =
EXTRA_DIST = "aachen-cable.krp" "bonn-antenna.krp" "braunschweig-cable.krp" "freiburg-cable.krp" "hamburg-antenna.krp" "hilden-cable.krp" "langenfeld-cable.krp" "leichlingen-cable.krp" "leverkusen-cable.krp" "monheim-cable.krp" "muenchen-cable.krp" "muensterland-antenna.krp" "wernigerode-antenna.krp"

install-data-local:
	$(mkinstalldirs) "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/"
	$(INSTALL_DATA) "$(srcdir)/aachen-cable.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/aachen-cable.krp"
	$(INSTALL_DATA) "$(srcdir)/bonn-antenna.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/bonn-antenna.krp"
	$(INSTALL_DATA) "$(srcdir)/hamburg-antenna.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/hamburg-antenna.krp"
	$(INSTALL_DATA) "$(srcdir)/wernigerode-antenna.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/wernigerode-antenna.krp"
	$(INSTALL_DATA) "$(srcdir)/freiburg-cable.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/freiburg-cable.krp"
	$(INSTALL_DATA) "$(srcdir)/muensterland-antenna.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/muensterland-antenna.krp"
	$(INSTALL_DATA) "$(srcdir)/hilden-cable.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/hilden-cable.krp"
	$(INSTALL_DATA) "$(srcdir)/langenfeld-cable.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/langenfeld-cable.krp"
	$(INSTALL_DATA) "$(srcdir)/leichlingen-cable.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/leichlingen-cable.krp"
	$(INSTALL_DATA) "$(srcdir)/monheim-cable.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/monheim-cable.krp"
	$(INSTALL_DATA) "$(srcdir)/leverkusen-cable.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/leverkusen-cable.krp"
	$(INSTALL_DATA) "$(srcdir)/braunschweig-cable.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/braunschweig-cable.krp"
	$(INSTALL_DATA) "$(srcdir)/muenchen-cable.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/muenchen-cable.krp"


uninstall-local:
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/aachen-cable.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/bonn-antenna.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/hamburg-antenna.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/wernigerode-antenna.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/freiburg-cable.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/muensterland-antenna.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/hilden-cable.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/langenfeld-cable.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/leichlingen-cable.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/monheim-cable.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/leverkusen-cable.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/braunschweig-cable.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/muenchen-cable.krp"
