SUBDIRS =
EXTRA_DIST = "aachen-antenna.krp" "aachen-cable.krp" "berlin-adlershof-antenna.krp" "berlin-antenna.krp" "bielefeld-cable.krp" "bonn-antenna.krp" "braunschweig-cable.krp" "chemnitz-cable.krp" "duesseldorf.krp" "fischbachau-cable.krp" "freiburg-cable.krp" "hamburg-antenna.krp" "hamburg-cable1.krp" "hamburg-cable2.krp" "hamburg-cable3.krp" "hamburg-cable4.krp" "hamburg-cable.alternative.krp" "hamburg-cable.krp" "hilden-cable.krp" "koeln-loevenich-cable.krp" "langenfeld-cable.krp" "leichlingen-cable.krp" "leverkusen-cable.krp" "monheim-cable.krp" "muenchen-cable.krp" "muenchen-forstenried-antenna.krp" "muensterland-antenna.krp" "nuernberg-cable.krp" "rheine-mesum-antenna.krp" "ulm-cable.2.krp" "ulm-cable.krp" "wernigerode-antenna.krp"

install-data-local:
	$(mkinstalldirs) "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/"
	$(INSTALL_DATA) "$(srcdir)/aachen-cable.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/aachen-cable.krp"
	$(INSTALL_DATA) "$(srcdir)/bonn-antenna.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/bonn-antenna.krp"
	$(INSTALL_DATA) "$(srcdir)/hamburg-antenna.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/hamburg-antenna.krp"
	$(INSTALL_DATA) "$(srcdir)/wernigerode-antenna.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/wernigerode-antenna.krp"
	$(INSTALL_DATA) "$(srcdir)/freiburg-cable.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/freiburg-cable.krp"
	$(INSTALL_DATA) "$(srcdir)/nuernberg-cable.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/nuernberg-cable.krp"
	$(INSTALL_DATA) "$(srcdir)/muensterland-antenna.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/muensterland-antenna.krp"
	$(INSTALL_DATA) "$(srcdir)/hilden-cable.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/hilden-cable.krp"
	$(INSTALL_DATA) "$(srcdir)/bielefeld-cable.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/bielefeld-cable.krp"
	$(INSTALL_DATA) "$(srcdir)/langenfeld-cable.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/langenfeld-cable.krp"
	$(INSTALL_DATA) "$(srcdir)/leichlingen-cable.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/leichlingen-cable.krp"
	$(INSTALL_DATA) "$(srcdir)/monheim-cable.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/monheim-cable.krp"
	$(INSTALL_DATA) "$(srcdir)/leverkusen-cable.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/leverkusen-cable.krp"
	$(INSTALL_DATA) "$(srcdir)/braunschweig-cable.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/braunschweig-cable.krp"
	$(INSTALL_DATA) "$(srcdir)/hamburg-cable4.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/hamburg-cable4.krp"
	$(INSTALL_DATA) "$(srcdir)/berlin-adlershof-antenna.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/berlin-adlershof-antenna.krp"
	$(INSTALL_DATA) "$(srcdir)/rheine-mesum-antenna.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/rheine-mesum-antenna.krp"
	$(INSTALL_DATA) "$(srcdir)/muenchen-cable.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/muenchen-cable.krp"
	$(INSTALL_DATA) "$(srcdir)/chemnitz-cable.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/chemnitz-cable.krp"
	$(INSTALL_DATA) "$(srcdir)/berlin-antenna.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/berlin-antenna.krp"
	$(INSTALL_DATA) "$(srcdir)/muenchen-forstenried-antenna.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/muenchen-forstenried-antenna.krp"
	$(INSTALL_DATA) "$(srcdir)/hamburg-cable3.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/hamburg-cable3.krp"
	$(INSTALL_DATA) "$(srcdir)/hamburg-cable1.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/hamburg-cable1.krp"
	$(INSTALL_DATA) "$(srcdir)/duesseldorf.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/duesseldorf.krp"
	$(INSTALL_DATA) "$(srcdir)/ulm-cable.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/ulm-cable.krp"
	$(INSTALL_DATA) "$(srcdir)/hamburg-cable2.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/hamburg-cable2.krp"
	$(INSTALL_DATA) "$(srcdir)/aachen-antenna.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/aachen-antenna.krp"
	$(INSTALL_DATA) "$(srcdir)/koeln-loevenich-cable.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/koeln-loevenich-cable.krp"
	$(INSTALL_DATA) "$(srcdir)/hamburg-cable.alternative.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/hamburg-cable.alternative.krp"
	$(INSTALL_DATA) "$(srcdir)/hamburg-cable.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/hamburg-cable.krp"
	$(INSTALL_DATA) "$(srcdir)/ulm-cable.2.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/ulm-cable.2.krp"
	$(INSTALL_DATA) "$(srcdir)/fischbachau-cable.krp" "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/fischbachau-cable.krp"


uninstall-local:
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/aachen-cable.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/bonn-antenna.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/hamburg-antenna.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/wernigerode-antenna.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/freiburg-cable.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/nuernberg-cable.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/muensterland-antenna.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/hilden-cable.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/bielefeld-cable.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/langenfeld-cable.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/leichlingen-cable.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/monheim-cable.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/leverkusen-cable.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/braunschweig-cable.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/hamburg-cable4.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/berlin-adlershof-antenna.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/rheine-mesum-antenna.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/muenchen-cable.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/chemnitz-cable.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/berlin-antenna.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/muenchen-forstenried-antenna.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/hamburg-cable3.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/hamburg-cable1.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/duesseldorf.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/ulm-cable.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/hamburg-cable2.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/aachen-antenna.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/koeln-loevenich-cable.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/hamburg-cable.alternative.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/hamburg-cable.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/ulm-cable.2.krp"
	-rm -f "$(DESTDIR)$(kde_datadir)/kradio/presets/germany/fischbachau-cable.krp"
